# StockMarketSimulator

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
client/: CMakeLists.txt
client/include/: ClientConnectionManager.hpp  ConnectionManager.hpp  Signals.hpp
client/include/Controller/: ClientConnectionController.hpp  ClientMessageController.hpp  ServerResponseController.hpp
client/include/Controllers/: ClientConnectionController.hpp
client/src/: main.cpp
client/tests/: CMakeLists.txt  client_tests.cpp
common/: CMakeLists.txt
common/Exceptions/: ClientDisconnected.hpp  ClientDisconnectedException.hpp  EmptyInput.hpp  EmptyInputException.hpp
common/include/: Atomic.hpp  CommunicationManager.hpp  Constants.hpp  Message.hpp  NetworkInformation.hpp  utils.hpp
common/include/Controller/: MessageController.hpp  SocketController.hpp
common/include/Exception/: ClientDisconnected.hpp  ServerDisconnected.hpp
common/include/Interfaces/: ConnectionManagerInterface.hpp
common/include/Manager/: MessageManager.hpp  SocketManager.hpp
common/tests/: CMakeLists.txt  utils_test.cpp
server/: CMakeLists.txt
server/Interface/: IStock.hpp
server/Stocks/: BeerStock.hpp  StockManager.hpp
server/include/: Atomic.hpp  ConnectionManager.hpp  Input.hpp  ServerConnectionManager.hpp  ServerManager.hpp
server/include/Client/: Client.hpp
server/include/Controller/: CommandController.hpp  ServerConnectionController.hpp  ServerMessageController.hpp
server/include/Controllers/: CommandController.hpp  ServerConnectionController.hpp
server/include/Interface/: IStock.hpp
server/include/Manager/: CommandManager.hpp  ServerConnectionManager.hpp
server/include/Stocks/: BeerStock.hpp  StockManager.hpp  StockType.hpp
server/src/: ServerManager.cpp  main.cpp
server/src/Client/: Client.cpp
server/src/Stocks/: StockManager.cpp
server/tests/: CMakeLists.txt
